<resources>
    <string name="app_name">VoiceBot</string>
    <string name="gemini_api_key">AIzaSyDW35bfhBIy28pH39-vcKOGFRKNd2eo1NU</string>
    <string name="title_activity_audio_record_test">AudioRecordTestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="title_activity_record_audio">RecordAudioActivity</string>
    <string name="tab_text_1">Basic Chat</string>
    <string name="tab_text_2">Automated Chat</string>
    <string name="tab_text_3">Text ChatBot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--==================================================-->
    <string name="atomated_chat_btn"> Generate </string>
    <string name="btn_close_service"> Close Service </string>
    <string name="dropDown_languages_list_label"> Choose Chat language </string>
    <string name="dropDown_chats_list_label"> Selected Chat  </string>

    <!--========================[Pages title]==========================-->
    <string name="chat_info_page"> Chat Information</string>
    <string name="home_page">Enter chat information</string>
    <string name="automated_chat_page">Automated chat service</string>
    <!--=======================[public]===========================-->

    <string name="btn_yes"> yes </string>
    <string name="btn_no"> no </string>
    <string name="btn_ok"> ok </string>
    <string name="btn_cancel"> no </string>
    <string name="btn_create_chat"> Create Chat </string>
    <string name="btn_register"> Register </string>


    <!--========================[EditText]==========================-->

    <string name="input_chat_name">  Enter Chat Name  </string>
    <string name="input_chat_desript">  Enter Chat Description  </string>
    <string name="input_chat_language">  Enter Chat Language   </string>

    <!--========================[EditText Message Errors]==========================-->
    <string name="input_is_empty">  This field cannot be left empty   </string>
<!--    <string name="input_chat_name">  Enter the chat name   </string>-->
<!--    <string name="input_chat_description">  Enter the chat description   </string>-->
<!--    <string name="input_chat_description">  Enter the chat description   </string>-->

<!--    <plurals name="input_chat_name">-->
<!--        <item quantity="input_chat_name">%d Photo</item>-->
<!--        <item quantity="other">%d Photos</item>-->
<!--    </plurals>-->
    <!--==================================================-->
    <string name="notify1_Automated_msg"> This service will work continuously without stopping, even when the application is closed </string>


    <string-array name="language_names">
        <item>Arabic</item>
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
<!--        <item>German</item>-->
<!--        <item>Chinese</item>-->
<!--        <item>Japan</item>-->
    </string-array>



    <string-array name="language_codes">
        <item>ar-SA-1</item>
        <item>en-US-3</item>
        <item>es-ES-1</item>
        <item>fr-FR-1</item>
<!--        <item>de</item>-->
<!--        <item>zh</item>-->
<!--        <item>ja-JP-3</item>-->
    </string-array>
    <!--=========================================================================-->
    <string name="msg_stop_record_service">The Automated Chat background service will be stopped</string>
    <string name="msg_stop_automated_chat">You must close the automated chat service before moving to any other service</string>
    <string name="msg_stop_session_chat">The entire current chat session will be stopped. Do you agree to this?</string>
    <string name="msg_choose_the_chat">Choose the chat</string>
    <string name="msg_choose_the_language">Choose the language</string>
    <string name="msg_failed_the_session_create">Failed to send the request</string>
    <string name="msg_no_internet"> !! No Internet Connection</string>
    <string name="retry_button">Retry Connection</string>

</resources>