<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_new_chat_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.CreateNewChatFragment"
    tools:ignore="HardcodedText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <include layout="@layout/internal_header" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:ignore="HardcodedText"
              android:gravity="end">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="start"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp">
                            <include layout="@layout/drop_down_list_chat" />
                    </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputChatName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_marginHorizontal="20dp"
                    android:hint="@string/input_chat_name">

                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/InputChatNameData"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                  android:id="@+id/InputChatDescription"
                  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginVertical="30dp"
                  android:layout_marginHorizontal="20dp"
                  android:hint="@string/input_chat_desript">

                  <!--this is the actual edit text which takes the input-->
                  <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/InputChatDescriptionData"
                      android:layout_width="match_parent"
                      android:layout_height="100dp" />

              </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp">
                        <include layout="@layout/drop_down_list" />
                </LinearLayout>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="end">
                    <Button
                        android:id="@+id/btnSubmitChatInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_create_chat"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="5dp"
                        android:paddingVertical="8dp"
                        android:textSize="24dp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:drawableRight="@drawable/baseline_add_24"/>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
    <include layout="@layout/progress_par"/>
</RelativeLayout>
</FrameLayout>